2017-06-28  Lukas Kluft  <lukas.kluft@gmail.com>

	* README.md: Updated installation recommendations.

	The installation guide for developers now includes a hint to
	install the package in the home directory not system wide.

	* typhon/plots/common.py (label_axes): Minor change in example.

2017-06-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/common.py (label_axes):

	Function add a label to each axis in a figure conveniently.

	* doc/typhon.plots.rst: Added `label_axes()` to documentation.

2017-06-16  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset):

	- Rather than hardcoding time-field to be "time", set this in an
	attribute.  For some datasets it may be "date"?

	* typhon/datasets/tovs.py(HIRS.__init__):

	- Set start_date, end_date from _tovs_defs.HIRS_periods

2017-06-12  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS2):

	- Add more aliases for referring to older satellites.

	* typhon/physics/units/em.py(SRF.estimate_band_coefficients):

	- In ad-hoc band correction estimate method, fix regular expression so
	that it works for older HIRS (before NOAA-10).  This contributes to
	the fix of HIRS FCDR #110.

2017-06-12  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Add some of the flags used in HIRS/2, HIRS/3, HIRS/4.  For now only
	adding the flags I'm acting upon, others later.  Currently used for
	FCDR HIRS processing.  Note that to make full use of these flags you
	want to use Python 3.6, but it should be possible to use them in
	Python 3.5 as well, just more in a more limited way.

	* typhon/datasets/tovs.py(HIRSKLM.get_mask_from_flags):

	- Added note/reminder to self to migrate hardcoded bitmasks to flag
	positinos defined in _tovs_defs.py

2017-06-06  Oliver Lemke  <olemke@core-dump.info>

	* typhon/physics/em.py (planck, planck_wavelength, planck_wavenumber,
	rayleighjeans_wavelength, radiance2planckTb, radiance2rayleighjeansTb,